--- a/ex3/package.json
+++ b/ex3/package.json
@@ -4,7 +4,7 @@
   "description": "A lightweight starter kit for building a Node-based API server",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "nodemon": "^2.0.7"
   }
 }
